syntax = "proto3";

package users;

service Users {
    rpc GetUserByMail(GetByMailRequest) returns (GetUserResponse) {}
    rpc GetUserByID(GetByIDRequest) returns (GetUserResponse) {}
}

message GetByMailRequest {
    string mail = 1;
}

message GetByIDRequest {
    string id = 1;
}

message User {
    string firstName = 1;
    string lastName = 2;
}

message GetUserResponse {
    User user = 1;
}
